# vuln-data-science

./: README.md  pyproject.toml
markdown/2024_insights/: 01_data_collection.md  02_data_cleaning.md  03_analysis.md
markdown/cve_data_stories/: 01_data_collection.md
markdown/cve_data_stories/2024_insights/: 02_data_cleaning.md  03_analysis.md
markdown/cve_data_stories/cwe_trends/: 02_data_processing.md  03_analysis.md
markdown/cve_data_stories/vendor_cve_trends/: 02_data_cleaning.md  03_analysis.md  04_processing.md  05_visualizations.md
markdown/osv_supply_chain/: osv_malicious_packages.md
markdown/patch_tuesday/: 01_data_collection.md  02_data_cleaning.md  03_weighted_vulnerability_scoring.md  04_analysis.md  05_summary.md
markdown/weekly_cve/: 01_data_collection.md  02_data_cleaning.md  03_analysis.md  04_summary.md
notebooks/2024_insights/: 01_data_collection.ipynb  02_data_cleaning.ipynb  03_analysis.ipynb
notebooks/cve_data_stories/: 01_data_collection.ipynb
notebooks/cve_data_stories/2024_insights/: 02_data_cleaning.ipynb  03_analysis.ipynb
notebooks/cve_data_stories/cwe_trends/: 02_data_processing.ipynb  03_analysis.ipynb
notebooks/cve_data_stories/vendor_cve_trends/: 02_data_cleaning.ipynb  03_analysis.ipynb  04_processing.ipynb  05_visualizations.ipynb
notebooks/osv_supply_chain/: osv_malicious_packages.ipynb
notebooks/osv_supply_chain/scripts/: osv_downloader.py  osv_ecosystem_summary.py  osv_processor.py
