[project]
name = "vuln-data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bar-chart-race>=0.1.0",
    "great-tables>=0.16.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "polars>=1.22.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "hatch>=1.14.0",
    "ipython>=8.31.0",
    "jupytext>=1.16.6",
    "nbqa>=1.9.1",
    "notebook>=7.3.2",
    "ruff>=0.8.6",
]
